Update challenge API
- Add error messages
- Return empty list on not found
- Return list of challenges on success
